<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SimplePreferencesActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="fill_parent">
            <TextView
                android:id="@+id/Title"
                android:text="@string/activity_name"
                android:textColor="#0277BD"
                android:textSize="8pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#0277BD"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="10" />
            <Button
                android:id="@+id/ButtonGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_activities"
                android:textColor="#0277BD"
                android:textSize="5pt"/>
        </LinearLayout>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pref_name" />
        <EditText
            android:id="@+id/EditTextPrefName"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_pref_value" />
        <EditText
            android:id="@+id/EditTextPrefValue"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:inputType="text|number"/>
        <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">
            <TableRow
                android:id="@+id/TableRow01"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_width="wrap_content">
                <Button
                    android:id="@+id/ButtonAddSharedPref"
                    android:text="@string/add_edit_shared_pref"
                    android:background="#F44336"
                    android:padding="5dp"
                    android:textSize="5pt"
                    android:layout_column="0"/>
                <Button
                    android:text="@string/clear_shared_pref_by_name"
                    android:id="@+id/ButtonClearSharedPrefByName"
                    android:padding="5dp"
                    android:background="#F44336"
                    android:textSize="5pt"
                    android:layout_column="2"/>
            </TableRow>
            <TableRow
                android:id="@+id/TableRow02"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_width="wrap_content">
                <Button
                    android:id="@+id/ButtonAddActivityPref"
                    android:text="@string/add_edit_activity_pref"
                    android:background="#2E7D32"
                    android:padding="5dp"
                    android:textSize="5pt"
                    android:layout_column="0"/>
                <Button
                    android:text="@string/clear_act_pref_by_name"
                    android:id="@+id/ButtonClearActPrefByName"
                    android:background="#2E7D32"
                    android:padding="5dp"
                    android:textSize="5pt"
                    android:layout_column="2"/>
            </TableRow>
            <TableRow
                android:id="@+id/TableRow03"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_width="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/SHARED_PREFS"
                    android:layout_width="wrap_content"
                    android:layout_column="0"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ButtonClearShared"
                    android:text="@string/clear_all_shared_prefs"
                    android:padding="5dp"
                    android:background="#F44336"
                    android:textSize="5pt"
                    android:layout_column="2"/>
            </TableRow>
            <TableRow
                android:id="@+id/TableRow04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/CurrentPrefs"
                    android:text="@string/show_prefs_here"
                    android:textColor="#F44336"
                    android:layout_height="wrap_content"
                    android:textSize="6pt"
                    android:layout_span="3"
                    android:layout_width="wrap_content" />
            </TableRow>
            <TableRow
                android:id="@+id/TableRow05"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_width="wrap_content">
                <TextView
                    android:layout_height="wrap_content"
                    android:text="@string/ACTIVITY_PREFS"
                    android:layout_width="wrap_content"
                    android:layout_column="0" />
                <Button
                    android:id="@+id/ButtonClearAct"
                    android:text="@string/clear_all_activity_prefs"
                    android:background="#2E7D32"
                    android:textSize="5pt"
                    android:layout_column="2"
                    android:padding="5dp"/>
            </TableRow>
            <TableRow
                android:id="@+id/TableRow06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TextView
                    android:id="@+id/CurrentActivityPrefs"
                    android:text="@string/show_prefs_here"
                    android:textColor="#2E7D32"
                    android:textSize="6pt"
                    android:layout_width="wrap_content"
                    android:layout_span="3" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>
